# TinyRecursiveModelAttention

./: .gitattributes  .gitignore  Dockerfile  LICENSE  NeurIPS-2022-jump-self-attention-capturing-high-order-statistics-in-transformers-Paper-Conference.txt  arc_benchmark.py  architecture.py  data_aug.py  dataset_cleaning.py  dataset_retrieve.py  main.py  model.py  model_sudoku.py  pyproject.toml
config/: cfg_pretrain.yaml
config/arch/: trm.yaml
data/: dataset_cleaning.py
data_arc/evaluation/: 0934a4d8.json  135a2760.json  136b0064.json  13e47133.json  142ca369.json  16b78196.json  16de56c4.json  1818057f.json  195c6913.json  1ae2feb7.json  20270e3b.json  20a9e565.json  21897d95.json  221dfab4.json  247ef758.json  269e22fb.json  271d71e2.json  28a6681f.json  291dc1e1.json  2b83f449.json  2ba387bc.json  2c181942.json  2d0172a1.json  31f7f899.json  332f06d7.json  35ab12c3.json  36a08778.json  38007db0.json  3a25b0d8.json  3dc255db.json  3e6067c3.json  409aa875.json  446ef5d2.json  45a5af55.json  4a21e3da.json  4c3d4a41.json  4c416de3.json  4c7dc4dd.json  4e34c42c.json  53fb4810.json  (+80 more)
data_arc/training/: 00576224.json  007bbfb7.json  009d5c81.json  00d62c1b.json  00dbd492.json  017c7c7b.json  025d127b.json  03560426.json  045e512c.json  0520fde7.json  05269061.json  05a7bcf2.json  05f2a901.json  0607ce86.json  0692e18c.json  06df4c85.json  070dd51e.json  08ed6ac7.json  09629e4f.json  0962bcdd.json  (+980 more)
data_sudoku/: data_aug.py
datasets/: columns.json  test.parquet  train.parquet
models/: jump_attention.py  layers.py  rsm_test.py
sudoku/: columns.json  train.parquet
