[project]
name = "tinyrecursivemodelattention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adam-atan2>=0.0.3",
    "argdantic>=1.3.3",
    "coolname>=2.2.0",
    "einops>=0.8.1",
    "huggingface-hub>=1.0.1",
    "hydra-core>=1.3.2",
    "importlib>=1.0.4",
    "ninja>=1.13.0",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "omegaconf>=2.3.0",
    "packaging>=25.0",
    "pydantic>=2.12.3",
    "pydantic-core>=2.41.4",
    "setuptools>=80.9.0",
    "setuptools-scm>=9.2.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.3",
    "wheel>=0.45.1",
]
